force-app/main/default/objects/Program__c/fields/Government_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_Type__c</fullName>
    <description>Government Type</description>
    <inlineHelpText>Government Type</inlineHelpText>
    <label>Government Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>