force-app/main/default/objects/Program__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <description>Program Description</description>
    <inlineHelpText>Program Description</inlineHelpText>
    <label>Program Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>