force-app/main/default/objects/Program__c/fields/Program_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Program_Purpose__c</fullName>
    <label>Program Purpose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>