force-app/main/default/objects/Program__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Abbreviation for Program Name</description>
    <inlineHelpText>Abbreviation for Program Name.</inlineHelpText>
    <label>Short Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>